Fixing Header experience on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -101,6 +101,7 @@ nav ul li a img {
 .language-selector {
   position: relative;
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 .language-selector span {
@@ -124,6 +125,7 @@ nav ul li a img {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-transform: uppercase;
 }
 
 body.dark .language-options {
@@ -245,6 +247,7 @@ body.dark .language-options li:hover {
     width: 88%;
     top: 60px;
     padding: 44px 20px;
+    z-index: 999;
   }
 
   .mobile-menu li {
@@ -257,6 +260,7 @@ body.dark .language-options li:hover {
     text-decoration: none;
     font-weight: bold;
     color: #01172F;
+    text-transform: uppercase;
   }
 
   .mobile-menu.dark li a {
